# SurveillanceSystem

./: CMakeLists.txt  README.md  camera.yaml  package.xml  plugin.xml  setup.py
config/: SurveillanceSystem.perspective  cameras.perspective  interactive_tf.rviz
include/: my_plugin.h
launch/: demo.launch  openni2.launch  plugin.launch  simulation.launch
src/: difference.cpp  differencePlugin.cpp  exec_plug.cpp  interactive_tf.cpp  my_plugin.cpp  my_plugin.ui  recorder.cpp  recorderPlugin.cpp
worlds/: surveillance_room.world
